# discord-binance-bot

./: .gitignore  pyproject.toml
trader/: binance_trade_bot.py  data.json  logger.py  main.py
trader/db/: models.py  services.py
